5.0.3 -> 5.0.4:
    - jbj: disable loop unraveling error msgs for now. better needs to be done.
    - jbj: fix: rpm-python h['filenames'] needs tagName(0x54aafb71) to
	return "Filenames" in order to find the filepathsTag extension.
    - jbj: add a missing newline to a debug message.
    - jbj: revert rpmtsOpenDB on --checksig path, rely on the lazy open
	in rpmtsFindPubkey instead.
    - jbj: fix: rpm -qp returns NOKEY because rpmdb is not yet open. Do a lazy
	open in rpmtsFindPubkey.
    - jbj: python: fix: insure that ts.setProbFilter() return is initialized.
    - jbj: fix: use rpmlog instead of rpmError for messages.
    - glen: print error when makeTempPath fails due missing temp dir
    - jbj: permit firefox debugging by creating an empty dir (#444310).
    - jbj: header: free tag data on error retrurn with damaged data.
    - rpm.org: rpmsw: insure that time has passed while calibrating (#435309).
    - jbj: header: fix: avoid double free with damaged data (#442761).
    - jbj: QNX: retrofit u_int32_t typedef where needed.
    - jbj: add random arch name feelgood fluffiness (#432496).
    - jbj: prepare for Fedorable dependency loops (#437041).
    - proyvind: add more compatibility adaptions to rpm4 compatibility wrapper (making deltarpm & ruby-rpm work)
    - proyvind: add rpmfiBuildFNames() to rpm4 compatibility wrapper (needed by rpmstats)

5.0.2 -> 5.0.3:
    - proyvind: add rpm 4 API compatibility wrapper (urpmi & apt-get succesfully ported with this so far \o/)
    - afb: python: backport fix for rpm.archscore() and add rpm.platformscore().
    - jbj: fix: eliminate librpmdb->librpm from dosetenv, use setenv(3) instead.
    - jbj: fix: rpmtsCheck non-zero return doesn't print failed build deps.
    - proyvind: add some extra functionality to gendiff (ancient Mandriva patch by Chmouel Boudjnah)
    - pixel: do check free size when bavail is 0
    - jbj: refactor rpmcliErase to use same code as rpmtsInstall.